--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,11 @@
         "GuiLayoutEnd",
         "EntityGetWithName",
         "EntityCreateNew",
-        "GuiGetScreenDimensions"
+        "GuiGetScreenDimensions",
+        "perk_pickup",
+        "DebugGetIsDevBuild",
+        "ModSettingGet",
+        "GuiStartFrame",
+        "EntityGetClosestWithTag"
     ]
 }
