- introduce table widget - rework damage stats view to use the table widget - change the settings for x and y pos of settings to be a textbox and no longer a slider

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,8 @@
         "DebugGetIsDevBuild",
         "ModSettingGet",
         "GuiStartFrame",
-        "EntityGetClosestWithTag"
+        "EntityGetClosestWithTag",
+        "GuiGetTextDimensions",
+        "USE_PIXEL_POSITION_FOR_GUI_ELEMENT"
     ]
 }
