- rework damage aggregation to a database like approach - add feature to be able to switch the aggregation of the damages numbers based on damage type/damage type simplified and causing entity

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
         "GuiStartFrame",
         "EntityGetClosestWithTag",
         "GuiGetTextDimensions",
-        "USE_PIXEL_POSITION_FOR_GUI_ELEMENT"
+        "USE_PIXEL_POSITION_FOR_GUI_ELEMENT",
+        "GamePrint"
     ]
 }
